# AIOBSERVER2024

./: .gitignore  README.md  pyproject.toml
common/: copernicus_open_access_hub_client.py  file_operations.py  sentinel_hub_client.py
copernicus_open_hub_service/: pipeline.py
serviceA/: pipeline.py
serviceB/: pipeline.py
shapefiles/Italia/: italia.dbf  italia.shp  italia.shx
