[tool.poetry]
name = "aiobserver2024"
version = "0.1.0"
description = "AIObserver2024"
authors = ["GEO-K-DEVS <150978796+geo-k-devs@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rasterio = "^1.3.10"
requests = "^2.32.3"
oauthlib = "^3.2.2"
requests-oauthlib = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
